# pyidha

./: README.md  pyproject.toml
modules/logging/: about_the_logging_module.md
modules/secrets/: about_secrets_module.md
modules/sql/: about_sql_module.md
modules/utils/: about_util_module.md
pyidha/: aws.py  models.py  secrets.py  sql.py  utils.py
tests/: test_secrets.py
