[tool.poetry]
name = "pyidha"
version = "0.1.2"
description = ""
authors = [
    "Spencer Marks <spencer.marks@childrens.harvard.edu>",
    "Christopher Remmel <christopher.remmel@childrens.harvard.edu>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
hvac = "*"
boto3 = "^1.26.91"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
